# eerie_leap_round_gauge

./: .gitignore  .gitmodules  Dockerfile.dev  Kconfig  README.md  example.docker-compose.yml  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay  esp32s3_touch_amoled_1_75_esp32s3_procpu.conf  esp32s3_touch_amoled_1_75_esp32s3_procpu.overlay  native_sim.conf  native_sim.overlay  qemu_cortex_a9.conf  qemu_cortex_a9.overlay
app/docs/esp32s3/: MEMORY.md
app/patches/modules/lvgl/: lvgl_al88_rotation.patch  lvgl_chart_bar_even_drawing.patch
app/patches/zephyr/: lvgl_thorvg_support.patch  modbus_k_work_cancel_sync_removed_as_blocking.patch  modbus_single_message_hregs_write_and_read.patch
app/src/: main.cpp
app/src/configuration/cbor/cbor_schemas/: gauge_config.cddl  system_config.cddl  ui_config.cddl
app/src/configuration/cbor/cbor_system_config/: cbor_system_config.h  cbor_system_config_cbor_decode.c  cbor_system_config_cbor_decode.h  cbor_system_config_cbor_encode.c  cbor_system_config_cbor_encode.h
app/src/configuration/cbor/cbor_ui_config/: cbor_ui_config.h  cbor_ui_config_cbor_decode.cpp  cbor_ui_config_cbor_decode.h  cbor_ui_config_cbor_encode.cpp  cbor_ui_config_cbor_encode.h  cbor_ui_config_size.h
app/src/configuration/cbor/system_config/: cbor_system_config_size.h  system_config_cbor_decode.c  system_config_cbor_decode.h  system_config_cbor_encode.c
app/src/configuration/cbor/traits/: cbor_trait.h  system_config_trait.cpp  system_config_trait.h  ui_config_trait.cpp  ui_config_trait.h
app/src/configuration/cbor/ui_config/: cbor_ui_config_size.h  ui_config.h  ui_config_cbor_decode.cpp  ui_config_cbor_decode.h  ui_config_cbor_encode.cpp
app/src/configuration/cbor_schemas/: gauge_config.cddl  system_config.cddl
app/src/configuration/cbor_traits/: cbor_trait.h  gauge_config_trait.h  system_config_trait.h  ui_config_trait.h
app/src/configuration/gauge_config/: gauge_config.h  gauge_config_cbor_decode.cpp  gauge_config_cbor_decode.h  gauge_config_cbor_encode.cpp  gauge_config_cbor_encode.h
app/src/configuration/services/: cbor_configuration_service.h  configuration_service.cpp  configuration_service.h  loaded_config.hpp
app/src/configuration/system_config/: cbor_system_config_size.h  system_config.h  system_config_cbor_decode.c  system_config_cbor_encode.c  system_config_cbor_encode.h
app/src/configuration/ui_config/: ui_config.h  ui_config_cbor_decode.cpp  ui_config_cbor_encode.cpp  ui_config_cbor_encode.h
app/src/controllers/: gague_controller.cpp  gague_controller.h  gague_screen_controller.cpp  gague_screen_controller.h  gpio_controller.cpp  gpio_controller.h  logging_controller.cpp  logging_controller.h  system_configuration_controller.cpp  system_configuration_controller.h  ui_controller.cpp  ui_controller.h
app/src/controllers/configuation/: system_configuration_controller.cpp  system_configuration_controller.h
app/src/controllers/configuration/: gauge_configuration_controller.cpp  gauge_configuration_controller.h  system_configuration_controller.cpp  system_configuration_controller.h
app/src/controllers/event_bus_filters/: user_status_filter.h
app/src/domain/canbus_domain/models/: can_channel_configuration.h  can_message_configuration.h  can_signal_configuration.h  canbus_configuration.h
app/src/domain/device_tree/: device_tree_setup.cpp  device_tree_setup.h
app/src/domain/interface_domain/: interface.cpp  interface.h  interface_status_update_handler.h
app/src/domain/system_domain/: system_configuration.h
app/src/domain/ui_domain/: ui_renderer.cpp  ui_renderer.h
app/src/subsys/device_tree/: dt_canbus.cpp  dt_canbus.h  dt_configurator.cpp  dt_configurator.h  dt_display.cpp  dt_display.h  dt_fs.cpp  dt_fs.h  dt_gpio.cpp  dt_gpio.h  dt_logger.cpp  dt_modbus.cpp  dt_modbus.h
app/src/subsys/event_bus/: event.h  event_bus.h  event_bus.tpp  event_bus_task.h  event_filter.h  subscription.h  subscription_handle.h
app/src/subsys/gpio/: gpio_button_cb_data.h  gpio_button_handler.h  gpio_buttons.cpp  gpio_buttons.h
app/src/subsys/modbus/: modbus.cpp  modbus.h  modbus_callbacks.h
app/src/subsys/random/: rng.cpp  rng.h
app/src/utilities/: constants.h
app/src/utilities/cbor/: cbor_helpers.hpp  cbor_serializer.cpp  cbor_serializer.h  cbor_serializer.hpp
app/src/utilities/concepts/: concepts.h
app/src/utilities/dev_tools/: system_info.cpp  system_info.h
app/src/utilities/guid/: guid.hpp  guid_generator.cpp  guid_generator.h
app/src/utilities/memory/: heap_allocator.cpp  heap_allocator.h
app/src/utilities/time/: boot_elapsed_time_service.cpp  boot_elapsed_time_service.h  i_time_service.h  time_helpers.hpp
app/src/utilities/type/: config_value.h
app/src/utilities/voltage_interpolator/: calibration_data.h  cubic_spline_voltage_interpolator.hpp  i_voltage_interpolator.h  interpolation_method.h  linear_voltage_interpolator.hpp
app/src/views/: i_renderable.h  main_view.cpp  main_view.h  renderable_base.h
app/src/views/configuration/: gauge_configuration.h  gauge_settings.h
app/src/views/main/: main_view.cpp  main_view.h
app/src/views/screens/: i_screen.h  screen.cpp  screen.h
app/src/views/themes/: dark_bw_theme.h  dark_theme.h  default_theme.h  i_theme.h  i_theme_observer.h  theme_manager.cpp  theme_manager.h
app/src/views/utilitites/: enums.h  frame.cpp  frame.h  positioning_helpers.cpp  positioning_helpers.h
app/src/views/widgets/: i_widget.h  widget_base.cpp  widget_base.h  widget_factory.cpp  widget_factory.h  widget_state.h
tests/functional/configuration/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/functional/configuration/src/: configuration_service_gauge_config.cpp  configuration_service_system_config.cpp
tests/functional/controllers/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/functional/controllers/boards/: native_sim.conf  native_sim.overlay
tests/functional/controllers/src/: gauge_configuration_controller.cpp  system_configuration_controller.cpp  ui_configuration_controller.cpp
(+187 files in other folders)
